--- a/designPatterns/composer.json
+++ b/designPatterns/composer.json
@@ -3,8 +3,6 @@
     "phpspec/phpspec": "~2.0"
   },
   "autoload": {
-    "psr-0": {
-      "": "src"
-    }
+    "psr-4": {"pattern\\": "patterns/"}
   }
 }
